{
  "version": 4,
  "terraform_version": "0.13.5",
  "serial": 128,
  "lineage": "4db18b6d-4aa9-b4e9-8268-99f491f4dcaf",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:973516012599:targetgroup/target-group/cff83153dd9e72bc",
            "arn_suffix": "targetgroup/target-group/cff83153dd9e72bc",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:973516012599:targetgroup/target-group/cff83153dd9e72bc",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "target-group",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0b1226ca559931eff"
          },
          "dependencies": [
            "aws_vpc.VPC_Test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "load_balancer_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:973516012599:security-group/sg-066a4c814c5fe1122",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-066a4c814c5fe1122",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20201130125312638300000001",
            "name_prefix": null,
            "owner_id": "973516012599",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-3de4dc47"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "service_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:973516012599:security-group/sg-0f75d75b340bd45c5",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f75d75b340bd45c5",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-066a4c814c5fe1122"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "terraform-20201130125316501500000003",
            "name_prefix": null,
            "owner_id": "973516012599",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-3de4dc47"
          },
          "dependencies": [
            "aws_security_group.load_balancer_security_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "VPCPrivateSubnetACidrBlock",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:973516012599:subnet/subnet-01b01b7a5e7120dff",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.170.32.0/26",
            "id": "subnet-01b01b7a5e7120dff",
            "map_public_ip_on_launch": false,
            "owner_id": "973516012599",
            "tags": {
              "Name": "VPCPrivateSubnetACidrBlock"
            },
            "vpc_id": "vpc-0b1226ca559931eff"
          },
          "dependencies": [
            "aws_vpc.VPC_Test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "VPCPrivateSubnetBCidrBlock",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:973516012599:subnet/subnet-0c70f6ce5ac5b49bd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.170.32.64/26",
            "id": "subnet-0c70f6ce5ac5b49bd",
            "map_public_ip_on_launch": false,
            "owner_id": "973516012599",
            "tags": {
              "Name": "VPCPrivateSubnetBCidrBlock"
            },
            "vpc_id": "vpc-0b1226ca559931eff"
          },
          "dependencies": [
            "aws_vpc.VPC_Test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "VPCPublicSubnetACidrBlock",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:973516012599:subnet/subnet-0d362213d575ee451",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.170.32.128/27",
            "id": "subnet-0d362213d575ee451",
            "map_public_ip_on_launch": true,
            "owner_id": "973516012599",
            "tags": {
              "Name": "VPCPublicSubnetACidrBlock"
            },
            "vpc_id": "vpc-0b1226ca559931eff"
          },
          "dependencies": [
            "aws_vpc.VPC_Test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "VPCPublicSubnetBCidrBlock",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:973516012599:subnet/subnet-0bbc0a44c7d42a5eb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.170.32.160/27",
            "id": "subnet-0bbc0a44c7d42a5eb",
            "map_public_ip_on_launch": true,
            "owner_id": "973516012599",
            "tags": {
              "Name": "VPCPublicSubnetBCidrBlock"
            },
            "vpc_id": "vpc-0b1226ca559931eff"
          },
          "dependencies": [
            "aws_vpc.VPC_Test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "VPC_Test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:973516012599:vpc/vpc-0b1226ca559931eff",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.170.32.0/24",
            "default_network_acl_id": "acl-05752be9e0717d2a5",
            "default_route_table_id": "rtb-04211001f67182f30",
            "default_security_group_id": "sg-0163dfd05654efb87",
            "dhcp_options_id": "dopt-23882d59",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0b1226ca559931eff",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-04211001f67182f30",
            "owner_id": "973516012599",
            "tags": {
              "Name": "Docker_VPC_Test"
            }
          }
        }
      ]
    }
  ]
}